--- a/index.html
+++ b/index.html
@@ -46,22 +46,31 @@
     <div class="video">
         <video class="video-bg" src="static/content/video1.mp4" autoplay loop muted preload></video>
     </div>
-    <p class="cyberSec">Aprenda Hacking do básico ao avançado</p>
+    <h1 class="cyberSec">Aprenda Hacking do básico ao avançado</h1>
     <i class="fa-solid fa-caret-down swip"></i>
     <p class="scrolldown">Role para saber mais</p>
     <main>
-        <h2>Por que escolher nosso curso?</h2>  
-        <div class="feature">
-            <div class="feature-item">
-                <h3>Conhecimento prático</h3>
-                <p>Nossa abordagem permite que você aprenda fazendo, garantindo uma compreensão aplicável.</p>
-            </div>
-            <div class="feature-item">
-                <h3>Suporte personalizado</h3>
+        <div class="feature-item feature-item1">
+            <h2>Conteúdo para todos</h2>  
+                <p>Sua idade não importa, nem seu conhecimento, nosso curso fornece conteúdo do básico ao avançado, tudo isso em um ambiente exclusivo e inovador.</p>
+
+                <div class="feature-content">
+                    <br><p>Nosso curso é baseado em um repositório privado github, aonde temos um guia de estudo desde o básico até o avançado, o guia é um documento de texto no qual organizamos todo o conteúdo postado em ordem (do mais básico até o mais avançado)</p>
+                    <div class="content-level">
+                        <ul>
+                            <li>Básico</li>
+                            <li>Intermediário</li>
+                            <li>Avançado</li>
+                        </ul>
+                    </div>
+                </div>
+                <!--Make content map-->
+            <div class="feature-item feature-item2">
+                <h2>Suporte personalizado</h2>
                 <p>Nossa equipe está sempre disponível para ajudar, garantindo que você não fique preso em nenhum momento do curso.</p>
             </div>
-            <div class="feature-item">
-                <h3>Atualizações constantes</h3>
+            <div class="feature-item feature-item3">
+                <h2>Atualizações constantes</h2>
                 <p>Mantenha-se atualizado com as últimas tendências e técnicas da cibersegurança, garantindo que você esteja sempre à frente.</p>
             </div>
         </div>
