--- a/index.html
+++ b/index.html
@@ -76,41 +76,41 @@
                 <div class="button-content">
                     <div class="image" id="basiclevel">
                         <!--Start Basic content-->
-                        <img class="img" src="static/content/cybersecintro.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/linuxintro.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/intronetwork.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/osint.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/cripto.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/owasp.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/darkwebintro.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/programacaointro.png" width="40%" height="100px" alt="">
+                        <img class="img" src="static/content/cybersecintro.png"  height="100px" alt="">
+                        <img class="img" src="static/content/linuxintro.png"  height="100px" alt="">
+                        <img class="img" src="static/content/intronetwork.png"  height="100px" alt="">
+                        <img class="img" src="static/content/osint.png"  height="100px" alt="">
+                        <img class="img" src="static/content/cripto.png"  height="100px" alt="">
+                        <img class="img" src="static/content/owasp.png"  height="100px" alt="">
+                        <img class="img" src="static/content/darkwebintro.png"  height="100px" alt="">
+                        <img class="img" src="static/content/programacaointro.png"   height="100px" alt="">
                         <!--End Basic content-->
                     </div>
                 </div>
                 <div class="button-content">
                     <!--Start intermediary content-->
                     <div class="image" id="interlevel">
-                        <img class="img" src="static/content/penetartiontesting.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/passwordcrack.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/vuln-systems.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/malware.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/LGPD.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/intrusao.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/cybercrime.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/socialengineering.png" width="40%" height="100px" alt="">
+                        <img class="img" src="static/content/penetartiontesting.png"  height="100px" alt="">
+                        <img class="img" src="static/content/passwordcrack.png"  height="100px" alt="">
+                        <img class="img" src="static/content/vuln-systems.png"  height="100px" alt="">
+                        <img class="img" src="static/content/malware.png"  height="100px" alt="">
+                        <img class="img" src="static/content/LGPD.png"  height="100px" alt="">
+                        <img class="img" src="static/content/intrusao.png"  height="100px" alt="">
+                        <img class="img" src="static/content/cybercrime.png"  height="100px" alt="">
+                        <img class="img" src="static/content/socialengineering.png"  height="100px" alt="">
                         <!--End intermediary content-->
                     </div>
                 </div>
                 <div class="button-content">
                     <div class="image" id="advlevel">
-                        <img class="img" src="static/content/exploiting.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/bufferOver.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/threathunting.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/obfusque.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/pentestprogram.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/recdata.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/forense.png" width="40%" height="100px" alt="">
-                        <img class="img" src="static/content/websec.png" width="40%" height="100px" alt="">
+                        <img class="img" src="static/content/exploiting.png"  height="100px" alt="">
+                        <img class="img" src="static/content/bufferOver.png"  height="100px" alt="">
+                        <img class="img" src="static/content/threathunting.png"  height="100px" alt="">
+                        <img class="img" src="static/content/obfusque.png"  height="100px" alt="">
+                        <img class="img" src="static/content/pentestprogram.png"  height="100px" alt="">
+                        <img class="img" src="static/content/recdata.png"  height="100px" alt="">
+                        <img class="img" src="static/content/forense.png"  height="100px" alt="">
+                        <img class="img" src="static/content/websec.png"  height="100px" alt="">
                     </div>
                 </div>
             </div>
@@ -121,11 +121,11 @@
                 <div class="benefits">
                     <div class="benefit-container">
                         <h3>Suporte completo e vitalício</h3>
-                        <img src="static/content/support.png" width="150px" alt="">
+                        <img src="static/content/support.png" width="130px" alt="">
                     </div>
                     <div class="benefit-container">
-                        <h3>Sistemas mal configurados para prática</h3>
-                        <img src="static/content/prática.png" width="150px" alt="">
+                        <h3>Sistemas propositalmente vulneráveis</h3>
+                        <img src="static/content/prática.png" width="130px" alt="">
                     </div>
                 </div>
             </div>
