--- a/index.html
+++ b/index.html
@@ -76,59 +76,68 @@
                 <div class="button-content">
                     <div class="image" id="basiclevel">
                         <!--Start Basic content-->
-                        <img class="img" src="static/content/cybersecintro.png"  height="100px" alt="">
-                        <img class="img" src="static/content/linuxintro.png"  height="100px" alt="">
-                        <img class="img" src="static/content/intronetwork.png"  height="100px" alt="">
-                        <img class="img" src="static/content/osint.png"  height="100px" alt="">
-                        <img class="img" src="static/content/cripto.png"  height="100px" alt="">
-                        <img class="img" src="static/content/owasp.png"  height="100px" alt="">
-                        <img class="img" src="static/content/darkwebintro.png"  height="100px" alt="">
-                        <img class="img" src="static/content/programacaointro.png"   height="100px" alt="">
+                        <img class="img" src="static/content/cybersecintro.png" height="100px" alt="">
+                        <img class="img" src="static/content/linuxintro.png" height="100px" alt="">
+                        <img class="img" src="static/content/intronetwork.png" height="100px" alt="">
+                        <img class="img" src="static/content/osint.png" height="100px" alt="">
+                        <img class="img" src="static/content/cripto.png" height="100px" alt="">
+                        <img class="img" src="static/content/owasp.png" height="100px" alt="">
+                        <img class="img" src="static/content/darkwebintro.png" height="100px" alt="">
+                        <img class="img" src="static/content/programacaointro.png" height="100px" alt="">
                         <!--End Basic content-->
                     </div>
                 </div>
+                
                 <div class="button-content">
                     <!--Start intermediary content-->
                     <div class="image" id="interlevel">
-                        <img class="img" src="static/content/penetartiontesting.png"  height="100px" alt="">
-                        <img class="img" src="static/content/passwordcrack.png"  height="100px" alt="">
-                        <img class="img" src="static/content/vuln-systems.png"  height="100px" alt="">
-                        <img class="img" src="static/content/malware.png"  height="100px" alt="">
-                        <img class="img" src="static/content/LGPD.png"  height="100px" alt="">
-                        <img class="img" src="static/content/intrusao.png"  height="100px" alt="">
-                        <img class="img" src="static/content/cybercrime.png"  height="100px" alt="">
-                        <img class="img" src="static/content/socialengineering.png"  height="100px" alt="">
+                        <img class="img" src="static/content/penetartiontesting.png" height="100px" alt="">
+                        <img class="img" src="static/content/passwordcrack.png" height="100px" alt="">
+                        <img class="img" src="static/content/vuln-systems.png" height="100px" alt="">
+                        <img class="img" src="static/content/malware.png" height="100px" alt="">
+                        <img class="img" src="static/content/LGPD.png" height="100px" alt="">
+                        <img class="img" src="static/content/intrusao.png" height="100px" alt="">
+                        <img class="img" src="static/content/cybercrime.png" height="100px" alt="">
+                        <img class="img" src="static/content/socialengineering.png" height="100px" alt="">
                         <!--End intermediary content-->
                     </div>
                 </div>
                 <div class="button-content">
                     <div class="image" id="advlevel">
-                        <img class="img" src="static/content/exploiting.png"  height="100px" alt="">
-                        <img class="img" src="static/content/bufferOver.png"  height="100px" alt="">
-                        <img class="img" src="static/content/threathunting.png"  height="100px" alt="">
-                        <img class="img" src="static/content/obfusque.png"  height="100px" alt="">
-                        <img class="img" src="static/content/pentestprogram.png"  height="100px" alt="">
-                        <img class="img" src="static/content/recdata.png"  height="100px" alt="">
-                        <img class="img" src="static/content/forense.png"  height="100px" alt="">
-                        <img class="img" src="static/content/websec.png"  height="100px" alt="">
+                        <img class="img" src="static/content/exploiting.png" height="100px" alt="">
+                        <img class="img" src="static/content/bufferOver.png" height="100px" alt="">
+                        <img class="img" src="static/content/threathunting.png" height="100px" alt="">
+                        <img class="img" src="static/content/obfusque.png" height="100px" alt="">
+                        <img class="img" src="static/content/pentestprogram.png" height="100px" alt="">
+                        <img class="img" src="static/content/recdata.png" height="100px" alt="">
+                        <img class="img" src="static/content/forense.png" height="100px" alt="">
+                        <img class="img" src="static/content/websec.png" height="100px" alt="">
                     </div>
                 </div>
             </div>
+        </div>
+
             <!--Make content map-->
             <div class="benefit-div">
                 <h2>Vantagens</h2>
                 <div class="separate"></div>
                 <div class="benefits">
+                    <!-- Primeiro benefício -->
                     <div class="benefit-container">
                         <h3>Suporte completo e vitalício</h3>
-                        <img src="static/content/support.png" width="130px" alt="">
+                        <img src="static/content/support.png" width="130px" alt="Suporte">
                     </div>
+                    <!-- Segundo benefício -->
                     <div class="benefit-container">
-                        <h3>Sistemas propositalmente vulneráveis</h3>
-                        <img src="static/content/prática.png" width="130px" alt="">
+                        <h3>Sistemas vulneráveis</h3>
+                        <img src="static/content/prática.png" width="130px" alt="Prática">
+                    </div>
+                    <!-- Terceiro benefício -->
+                    <div class="benefit-container">
+                        <h3>Conteúdo exclusivo</h3> 
+                        <img src="static/content/banner.png" width="130px" alt="Banner">
                     </div>
                 </div>
-            </div>
         </div>
 
         <div class="feature-item feature-itemb">
@@ -143,7 +152,7 @@
             </ul>
         </div>
         <div class="differentiation feature-itemb">
-        <h2>O que nos faz diferente?</h2>
+            <h2>O que nos faz diferente?</h2>
             <p>Temos algumas características que nos diferenciam de outros cursos com o mesmo conteúdo e 3x mais caros:
             </p>
             <ul>
