--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
         <video class="video-bg" src="static/content/video1.mp4" autoplay loop muted preload></video>
     </div>
     <h1 class="cyberSec">Aprenda Hacking do básico ao avançado</h1>
-    <a href="#scroll1"><i class="fa-solid fa-caret-down swip"></i></a>
-    <p class="scrolldown">Role para saber mais</p>
+    <div class="align-center">
+        <a href="#scroll1"><i class="fa-solid fa-caret-down swip"></i></a>
+        <p class="scrolldown">Role para saber mais</p>
+    </div>
     <!--End Video section-->
     <main>
         <!--start content-->
@@ -87,7 +89,7 @@
                         <!--End Basic content-->
                     </div>
                 </div>
-                
+
                 <div class="button-content">
                     <!--Start intermediary content-->
                     <div class="image" id="interlevel">
@@ -117,27 +119,29 @@
             </div>
         </div>
 
-            <!--Make content map-->
-            <div class="benefit-div">
-                <h2>Vantagens</h2>
-                <div class="separate"></div>
-                <div class="benefits">
-                    <!-- Primeiro benefício -->
-                    <div class="benefit-container">
-                        <h3>Suporte completo e vitalício</h3>
-                        <img src="static/content/support.png" width="130px" alt="Suporte">
-                    </div>
-                    <!-- Segundo benefício -->
-                    <div class="benefit-container">
-                        <h3>Sistemas vulneráveis</h3>
-                        <img src="static/content/prática.png" width="130px" alt="Prática">
-                    </div>
-                    <!-- Terceiro benefício -->
-                    <div class="benefit-container">
-                        <h3>Conteúdo exclusivo</h3> 
-                        <img src="static/content/banner.png" width="130px" alt="Banner">
-                    </div>
+        <!--Make content map-->
+        <div class="benefit-div">
+            <h2>Vantagens</h2>
+            <div class="separate"></div>
+            <div class="benefits">
+                <!-- Primeiro benefício -->
+                <div class="benefit-container">
+                    <h3>Suporte completo e vitalício</h3>
+                    <img src="static/content/support.png" width="130px" alt="Suporte">
                 </div>
+                <!-- Segundo benefício -->
+                <div class="benefit-container">
+                    <h3>Sistemas vulneráveis</h3>
+                    <img src="static/content/prática.png" width="130px" alt="Prática">
+                </div>
+                <!-- Terceiro benefício -->
+                <!--
+                <div class="benefit-container">
+                    <h3>Conteúdo exclusivo</h3>
+                    <img src="static/content/banner.png" width="130px" alt="Banner">
+                </div>
+                -->
+            </div>
         </div>
 
         <div class="feature-item feature-itemb">
