--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="static/content/lock.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7351777d54.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/media-query.css">
     <script defer src="static/js/menu-bar.js"></script>
     <script defer src="static/js/change-level.js"></script>
 </head>
